--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -24,7 +24,7 @@
     </div>
 </div>
 
-<form>
+<form [formGroup]="categoryForm">
     <div class="card">
         <div class="card-header">
             Informações sobre o cabeçalho
@@ -33,11 +33,11 @@
             <div class="form-row">
                 <div class="form-group col-md-4">
                     <label for="name">Nome</label>
-                    <input type="text" id="name" class="form-control">
+                    <input type="text" id="name" class="form-control" formControlName="name">
                 </div>
                 <div class="form-group col-md-8">
                     <label for="description">Descrição</label>
-                    <input type="text" id="description" class="form-control">
+                    <input type="text" id="description" class="form-control" formControlName="description">
                 </div>
             </div>
         </div>
