--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -7,14 +7,14 @@
             <a routerLink="/categories">Categorias</a>
         </li>
         <li class="breadcrumb-item active">
-            Formulário de categorias
+            {{ pageTitle }}
         </li>
     </ol>
 </nav>
 <div class="row mb-4">
     <div class="col-md">
         <h1 class="h2 border-left pl-2">
-            Formulário de categorias
+            {{ pageTitle }}
         </h1>
     </div>
     <div class="col-md">
@@ -24,7 +24,7 @@
     </div>
 </div>
 
-<form [formGroup]="categoryForm">
+<form [formGroup]="categoryForm" (submit)="submitForm()">
     <div class="card">
         <div class="card-header">
             Informações sobre o cabeçalho
@@ -34,7 +34,18 @@
                 <div class="form-group col-md-4">
                     <label for="name">Nome</label>
                     <input type="text" id="name" class="form-control" formControlName="name">
+
+                    <div class="text-danger"
+                        *ngIf="categoryForm.get('name').invalid && categoryForm.get('name').touched">
+                        <div *ngIf="categoryForm.get('name').errors.required">
+                            dado obrigatório
+                        </div>
+                        <div *ngIf="categoryForm.get('name').errors.minLength">
+                            dado deve ter no mínimo 2 caracteres
+                        </div>
+                    </div>
                 </div>
+
                 <div class="form-group col-md-8">
                     <label for="description">Descrição</label>
                     <input type="text" id="description" class="form-control" formControlName="description">
@@ -42,8 +53,16 @@
             </div>
         </div>
     </div>
-
-    <button type="submit" class="btn btn-primary btn-lg float-right mt-3">
+    <div class="alert alert-danger mt-4" *ngIf="serverErrorMessages">
+        <strong>
+            Erro no servidor:
+        </strong>
+        <ul>
+            <li *ngFor="let error of serverErrorMessages">{{ error }}</li>
+        </ul>
+    </div>
+    <button [disabled]="submittingForm || categoryForm.invalid" type="submit"
+        class="btn btn-primary btn-lg float-right mt-3">
         Salvar
     </button>
 </form>
